Secton 2 Done and Sesstion 3 is in progress!

--- a/index.html
+++ b/index.html
@@ -45,6 +45,25 @@
                                 </span>
                                 <p class="inline-block">Our Team</p>
                             </div>
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                                <div class="top-heading">
+                                    <span class="icon-wrapper">
+                                        <svg width="19" height="18" viewBox="0 0 19 18" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path
+                                                d="M18.5523 9L10.2762 0.723877L8.39061 2.60949L14.7811 9L8.39061 15.3905L10.2762 17.2761L18.5523 9ZM11.0191 9L2.74304 0.723877L0.857422 2.60949L7.24794 9L0.857422 15.3905L2.74304 17.2761L11.0191 9Z"
+                                                fill="#FF6314" />
+                                        </svg>
+                                    </span>
+                                    <p class="inline-block">Our Team</p>
+                                </div>
+                                <div class="second-heading">
+                                    <h2 class="pb-50">
+                                        Our Expert Drivers
+                                    </h2>
+                                </div>
+                            </div>
+                            <!-- Slider Buttons Will be Here! -->
                             <div class="second-heading">
                                 <h2 class="pb-50">
                                     Our Expert Drivers
@@ -432,6 +451,167 @@
                 </div>
         </section>
         <!-- Our Team Section End -->
+
+        <!-- At a Glance Section Start  -->
+
+        <section class="at-a-glance-section">
+            <div class="container py-120">
+                <div class="row">
+                    <div class="at-a-glance-heading">
+                        <h2 class="text-center">At a Glance</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="glance-card-wrapper">
+                        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
+                            <div class="glance-card">
+                                <div class="icon-wrapper">
+                                    <svg width="32" height="28" viewBox="0 0 32 28" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M16 0.666748L0 10.0001L16 19.3334L29.3333 11.5557V21.3334H32V10.0001L16 0.666748ZM5.33203 15.9874V22.0002C7.76459 25.2387 11.6375 27.3335 15.9997 27.3335C20.3619 27.3335 24.2348 25.2387 26.6673 22.0002L26.6668 15.9885L16.0004 22.2106L5.33203 15.9874Z"
+                                            fill="#FF6314" />
+                                    </svg>
+
+                                </div>
+                                <div class="glance-counter">
+                                    <p>
+                                        30.3K
+                                    </p>
+                                </div>
+                                <h5 class="glance-card-title">
+                                    Student Enrolled
+                                </h5>
+                            </div>
+                        </div>
+                        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
+                            <div class="glance-card">
+                                <div class="icon-wrapper">
+                                    <svg width="32" height="28" viewBox="0 0 32 28" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M16 0.666748L0 10.0001L16 19.3334L29.3333 11.5557V21.3334H32V10.0001L16 0.666748ZM5.33203 15.9874V22.0002C7.76459 25.2387 11.6375 27.3335 15.9997 27.3335C20.3619 27.3335 24.2348 25.2387 26.6673 22.0002L26.6668 15.9885L16.0004 22.2106L5.33203 15.9874Z"
+                                            fill="#FF6314" />
+                                    </svg>
+
+                                </div>
+                                <div class="glance-counter">
+                                    <p>
+                                        40.5K
+                                    </p>
+                                </div>
+                                <h5 class="glance-card-title">
+                                    Class Completed
+                                </h5>
+                            </div>
+                        </div>
+                        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
+                            <div class="glance-card">
+                                <div class="icon-wrapper">
+                                    <svg width="32" height="28" viewBox="0 0 32 28" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M16 0.666748L0 10.0001L16 19.3334L29.3333 11.5557V21.3334H32V10.0001L16 0.666748ZM5.33203 15.9874V22.0002C7.76459 25.2387 11.6375 27.3335 15.9997 27.3335C20.3619 27.3335 24.2348 25.2387 26.6673 22.0002L26.6668 15.9885L16.0004 22.2106L5.33203 15.9874Z"
+                                            fill="#FF6314" />
+                                    </svg>
+
+                                </div>
+                                <div class="glance-counter">
+                                    <p>
+                                        89.7%
+                                    </p>
+                                </div>
+                                <h5 class="glance-card-title">
+                                    Satisfaction Rate
+                                </h5>
+                            </div>
+                        </div>
+                        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
+                            <div class="glance-card">
+                                <div class="icon-wrapper">
+                                    <svg width="32" height="28" viewBox="0 0 32 28" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M16 0.666748L0 10.0001L16 19.3334L29.3333 11.5557V21.3334H32V10.0001L16 0.666748ZM5.33203 15.9874V22.0002C7.76459 25.2387 11.6375 27.3335 15.9997 27.3335C20.3619 27.3335 24.2348 25.2387 26.6673 22.0002L26.6668 15.9885L16.0004 22.2106L5.33203 15.9874Z"
+                                            fill="#FF6314" />
+                                    </svg>
+
+                                </div>
+                                <div class="glance-counter">
+                                    <p>
+                                        1.5K
+                                    </p>
+                                </div>
+                                <h5 class="glance-card-title">
+                                    Top Instructors
+                                </h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- At a Glance Section End -->
+
+        <!-- Latest News Posts Section Start -->
+
+        <section class="latest-news-section">
+            <div class="container">
+                <div class="row">
+                    <div class="latest-news-heading">
+                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                            <div class="top-heading">
+                                <span class="icon-wrapper">
+                                    <svg width="19" height="18" viewBox="0 0 19 18" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M18.5523 9L10.2762 0.723877L8.39061 2.60949L14.7811 9L8.39061 15.3905L10.2762 17.2761L18.5523 9ZM11.0191 9L2.74304 0.723877L0.857422 2.60949L7.24794 9L0.857422 15.3905L2.74304 17.2761L11.0191 9Z"
+                                            fill="#FF6314" />
+                                    </svg>
+                                </span>
+                                <p class="inline-block">Articles</p>
+                            </div>
+                            <div class="second-heading">
+                                <h2 class="pb-50">
+                                    Latest News Posts
+                                </h2>
+                            </div>
+                        </div>
+                        <!-- Slider Buttons Will be Here! -->
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="latest-news-card-wrapper">
+                        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                            <div class="latest-news-card">
+                                <div class="latest-news img">
+                                    <img src="#" alt="Car Drivng">
+                                </div>
+                                <div class="news-description">
+                                    <div class="news-info">
+                                        <div class="news-author">
+                                            by Drevid
+                                        </div>
+                                        <div class="date">
+                                            10 Mayx, 2025
+                                        </div>
+                                    </div>
+                                    <div class="news-title">
+                                        How Autonomous Driving Will Assist You in Passing
+                                    </div>
+                                    <div class="read-more more-latest-news-info">
+                                        <a href="#">Read More</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Latest News Posts Section End -->
 
     </main>
     <!-- Main End -->
