Properly Completed Latest News Post Section!

--- a/index.html
+++ b/index.html
@@ -45,25 +45,6 @@
                                 </span>
                                 <p class="inline-block">Our Team</p>
                             </div>
-                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                                <div class="top-heading">
-                                    <span class="icon-wrapper">
-                                        <svg width="19" height="18" viewBox="0 0 19 18" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <path
-                                                d="M18.5523 9L10.2762 0.723877L8.39061 2.60949L14.7811 9L8.39061 15.3905L10.2762 17.2761L18.5523 9ZM11.0191 9L2.74304 0.723877L0.857422 2.60949L7.24794 9L0.857422 15.3905L2.74304 17.2761L11.0191 9Z"
-                                                fill="#FF6314" />
-                                        </svg>
-                                    </span>
-                                    <p class="inline-block">Our Team</p>
-                                </div>
-                                <div class="second-heading">
-                                    <h2 class="pb-50">
-                                        Our Expert Drivers
-                                    </h2>
-                                </div>
-                            </div>
-                            <!-- Slider Buttons Will be Here! -->
                             <div class="second-heading">
                                 <h2 class="pb-50">
                                     Our Expert Drivers
@@ -449,6 +430,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
         <!-- Our Team Section End -->
 
@@ -556,7 +538,7 @@
 
         <!-- Latest News Posts Section Start -->
 
-        <section class="latest-news-section">
+        <section class="latest-news-section py-120">
             <div class="container">
                 <div class="row">
                     <div class="latest-news-heading">
@@ -585,23 +567,171 @@
                     <div class="latest-news-card-wrapper">
                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
                             <div class="latest-news-card">
-                                <div class="latest-news img">
-                                    <img src="#" alt="Car Drivng">
+                                <div class="latest-news-img">
+                                    <img src="./assets/img/news-img/latest-news-1.png" alt="Car Drivng">
                                 </div>
                                 <div class="news-description">
                                     <div class="news-info">
-                                        <div class="news-author">
-                                            by Drevid
-                                        </div>
-                                        <div class="date">
-                                            10 Mayx, 2025
-                                        </div>
+                                        <p class="news-author">
+                                            <span>
+                                                <svg width="16" height="21" viewBox="0 0 16 21" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path
+                                                        d="M16 21H14V19C14 17.3431 12.6569 16 11 16H5C3.34315 16 2 17.3431 2 19V21H0V19C0 16.2386 2.23858 14 5 14H11C13.7614 14 16 16.2386 16 19V21ZM8 12C4.68629 12 2 9.3137 2 6C2 2.68629 4.68629 0 8 0C11.3137 0 14 2.68629 14 6C14 9.3137 11.3137 12 8 12ZM8 10C10.2091 10 12 8.20914 12 6C12 3.79086 10.2091 2 8 2C5.79086 2 4 3.79086 4 6C4 8.20914 5.79086 10 8 10Z"
+                                                        fill="#FF6314" />
+                                                </svg>
+                                            </span>
+                                            <span>
+                                                by&NonBreakingSpace;Drevid
+                                            </span>
+                                        </p>
+                                        <p class="date">
+                                            <span>
+                                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path
+                                                        d="M7 0V2H13V0H15V2H19C19.5523 2 20 2.44772 20 3V19C20 19.5523 19.5523 20 19 20H1C0.44772 20 0 19.5523 0 19V3C0 2.44772 0.44772 2 1 2H5V0H7ZM18 10H2V18H18V10ZM5 4H2V8H18V4H15V6H13V4H7V6H5V4Z"
+                                                        fill="#FF6314" />
+                                                </svg>
+                                            </span>
+                                            <span>
+                                                10&NonBreakingSpace;Mayx,&NonBreakingSpace;2025
+                                            </span>
+                                        </p>
                                     </div>
                                     <div class="news-title">
-                                        How Autonomous Driving Will Assist You in Passing
+                                        <h5>
+                                            How Autonomous Driving Will Assist You in Passing
+                                        </h5>
                                     </div>
                                     <div class="read-more more-latest-news-info">
-                                        <a href="#">Read More</a>
+                                        <a href="#">
+                                            <span>
+                                                Read More
+                                            </span>
+                                            <span>
+                                                <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path
+                                                        d="M12.1716 6.9999L6.8076 1.63589L8.2218 0.22168L16 7.9999L8.2218 15.778L6.8076 14.3638L12.1716 8.9999H0V6.9999H12.1716Z"
+                                                        fill="#FF6314" />
+                                                </svg>
+                                            </span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                            <div class="latest-news-card">
+                                <div class="latest-news-img">
+                                    <img src="./assets/img/news-img/latest-news-2.png" alt="Car Drivng">
+                                </div>
+                                <div class="news-description">
+                                    <div class="news-info">
+                                        <p class="news-author">
+                                            <span>
+                                                <svg width="16" height="21" viewBox="0 0 16 21" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path
+                                                        d="M16 21H14V19C14 17.3431 12.6569 16 11 16H5C3.34315 16 2 17.3431 2 19V21H0V19C0 16.2386 2.23858 14 5 14H11C13.7614 14 16 16.2386 16 19V21ZM8 12C4.68629 12 2 9.3137 2 6C2 2.68629 4.68629 0 8 0C11.3137 0 14 2.68629 14 6C14 9.3137 11.3137 12 8 12ZM8 10C10.2091 10 12 8.20914 12 6C12 3.79086 10.2091 2 8 2C5.79086 2 4 3.79086 4 6C4 8.20914 5.79086 10 8 10Z"
+                                                        fill="#FF6314" />
+                                                </svg>
+                                            </span>
+                                            <span>
+                                                by&NonBreakingSpace;Drevid
+                                            </span>
+                                        </p>
+                                        <p class="date">
+                                            <span>
+                                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path
+                                                        d="M7 0V2H13V0H15V2H19C19.5523 2 20 2.44772 20 3V19C20 19.5523 19.5523 20 19 20H1C0.44772 20 0 19.5523 0 19V3C0 2.44772 0.44772 2 1 2H5V0H7ZM18 10H2V18H18V10ZM5 4H2V8H18V4H15V6H13V4H7V6H5V4Z"
+                                                        fill="#FF6314" />
+                                                </svg>
+                                            </span>
+                                            <span>
+                                                10&NonBreakingSpace;Mayx,&NonBreakingSpace;2025
+                                            </span>
+                                        </p>
+                                    </div>
+                                    <div class="news-title">
+                                        <h5>
+                                            Drivic To Bring Significant Vehicle Guide of Driver.
+                                        </h5>
+                                    </div>
+                                    <div class="read-more more-latest-news-info">
+                                        <a href="#">
+                                            <span>
+                                                Read More
+                                            </span>
+                                            <span>
+                                                <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path
+                                                        d="M12.1716 6.9999L6.8076 1.63589L8.2218 0.22168L16 7.9999L8.2218 15.778L6.8076 14.3638L12.1716 8.9999H0V6.9999H12.1716Z"
+                                                        fill="#FF6314" />
+                                                </svg>
+                                            </span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                            <div class="latest-news-card">
+                                <div class="latest-news-img">
+                                    <img src="./assets/img/news-img/latest-news-3.png" alt="Car Drivng">
+                                </div>
+                                <div class="news-description">
+                                    <div class="news-info">
+                                        <p class="news-author">
+                                            <span>
+                                                <svg width="16" height="21" viewBox="0 0 16 21" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path
+                                                        d="M16 21H14V19C14 17.3431 12.6569 16 11 16H5C3.34315 16 2 17.3431 2 19V21H0V19C0 16.2386 2.23858 14 5 14H11C13.7614 14 16 16.2386 16 19V21ZM8 12C4.68629 12 2 9.3137 2 6C2 2.68629 4.68629 0 8 0C11.3137 0 14 2.68629 14 6C14 9.3137 11.3137 12 8 12ZM8 10C10.2091 10 12 8.20914 12 6C12 3.79086 10.2091 2 8 2C5.79086 2 4 3.79086 4 6C4 8.20914 5.79086 10 8 10Z"
+                                                        fill="#FF6314" />
+                                                </svg>
+                                            </span>
+                                            <span>
+                                                by&NonBreakingSpace;Drevid
+                                            </span>
+                                        </p>
+                                        <p class="date">
+                                            <span>
+                                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path
+                                                        d="M7 0V2H13V0H15V2H19C19.5523 2 20 2.44772 20 3V19C20 19.5523 19.5523 20 19 20H1C0.44772 20 0 19.5523 0 19V3C0 2.44772 0.44772 2 1 2H5V0H7ZM18 10H2V18H18V10ZM5 4H2V8H18V4H15V6H13V4H7V6H5V4Z"
+                                                        fill="#FF6314" />
+                                                </svg>
+                                            </span>
+                                            <span>
+                                                10&NonBreakingSpace;Mayx,&NonBreakingSpace;2025
+                                            </span>
+                                        </p>
+                                    </div>
+                                    <div class="news-title">
+                                        <h5>
+                                            Driving Tips that Cause You to a Far & Far Better Driver.
+                                        </h5>
+                                    </div>
+                                    <div class="read-more more-latest-news-info">
+                                        <a href="#">
+                                            <span>
+                                                Read More
+                                            </span>
+                                            <span>
+                                                <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path
+                                                        d="M12.1716 6.9999L6.8076 1.63589L8.2218 0.22168L16 7.9999L8.2218 15.778L6.8076 14.3638L12.1716 8.9999H0V6.9999H12.1716Z"
+                                                        fill="#FF6314" />
+                                                </svg>
+                                            </span>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -612,16 +742,6 @@
         </section>
 
         <!-- Latest News Posts Section End -->
-
-    </main>
-    <!-- Main End -->
-    </div>
-    </div>
-    </div>
-    </div>
-    </div>
-    </section>
-    <!-- Our Team Section End -->
 
     </main>
     <!-- Main End -->
