Added FAQ Section - in progress

--- a/index.html
+++ b/index.html
@@ -536,6 +536,38 @@
 
         <!-- At a Glance Section End -->
 
+        <!-- FAQ's Section Start -->
+
+        <ssection class="faq-section py-120">
+            <div class="container">
+                <div class="row">
+                    <div class="faq-section-heading text-center">
+                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                            <div class="top-heading">
+                                <span class="icon-wrapper">
+                                    <svg width="19" height="18" viewBox="0 0 19 18" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M18.5523 9L10.2762 0.723877L8.39061 2.60949L14.7811 9L8.39061 15.3905L10.2762 17.2761L18.5523 9ZM11.0191 9L2.74304 0.723877L0.857422 2.60949L7.24794 9L0.857422 15.3905L2.74304 17.2761L11.0191 9Z"
+                                            fill="#FF6314" />
+                                    </svg>
+                                </span>
+                                <p class="inline-block">FAQ's</p>
+                            </div>
+                            <div class="second-heading">
+                                <h2 class="pb-50">
+                                    Our Expert Drivers
+                                </h2>
+                            </div>
+                        </div>
+                        <!-- Slider Buttons Will be Here! -->
+                    </div>
+                </div>
+            </div>
+        </ssection>
+
+        <!-- FAQ's Section End -->
+
         <!-- Latest News Posts Section Start -->
 
         <section class="latest-news-section py-120">
