Added Training Section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <main>
 
         <!-- Our Team Section Start -->
+
         <section class="our-team-section">
             <div class="container py-120">
                 <div class="row">
@@ -432,6 +433,7 @@
                 </div>
             </div>
         </section>
+
         <!-- Our Team Section End -->
 
         <!-- At a Glance Section Start  -->
@@ -535,6 +537,30 @@
         </section>
 
         <!-- At a Glance Section End -->
+
+        <!-- Our Training Video Section Starts -->
+
+        <section class="training-video-section">
+            <div class="container">
+                <div class="row training-video-title-row">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                        <h2 class="training-video-title">
+                            Our Training Video
+                        </h2>
+                        <div class="tv-play-icon">
+                            <svg width="180" height="180" viewBox="0 0 180 180" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="90" cy="90" r="90" fill="#FF6314" />
+                                <path d="M120 90L75 115.981L75 64.0192L120 90Z" fill="white" />
+                            </svg>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Our Training Video Section Ends -->
 
         <!-- FAQ's Section Start -->
 
