Updated About Us section Home 2

--- a/index.html
+++ b/index.html
@@ -28,6 +28,81 @@
     <!-- Main Start -->
     <main>
 
+        <!-- About Us Section Start -->
+
+        <section class="about-us-home-2">
+            <div class="container py-120">
+                <div class="row">
+                    <div class="about-us-section-content">
+                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                            <div class="about-us-img-wrapper">
+                                <div class="left-img">
+                                    <img src="./assets/img/about-us-home-2/image_2025-09-03_09-45-28.png"
+                                        alt="About Us Left Image">
+                                    <img src="./assets/img/about-us-home-2/image_2025-09-03_09-45-47.png"
+                                        alt="About Us Left Image">
+                                </div>
+                                <div class="right-img">
+                                    <img src="./assets/img/about-us-home-2/image_2025-09-03_09-46-03.png"
+                                        alt="About Us Right Image">
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                            <div class="about-us-content-wrapper">
+                                <div class="top-heading">
+                                    <span class="icon-wrapper">
+                                        <svg width="19" height="18" viewBox="0 0 19 18" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path
+                                                d="M18.5523 9L10.2762 0.723877L8.39061 2.60949L14.7811 9L8.39061 15.3905L10.2762 17.2761L18.5523 9ZM11.0191 9L2.74304 0.723877L0.857422 2.60949L7.24794 9L0.857422 15.3905L2.74304 17.2761L11.0191 9Z"
+                                                fill="#FF6314" />
+                                        </svg>
+                                    </span>
+                                    <p class="inline-block">About Us</p>
+                                </div>
+                                <div class="second-heading">
+                                    <h2 class="pb-50">
+                                        The Top-Rated Driving School Globally
+                                    </h2>
+                                </div>
+                                <div class="about-us-home-2-desc">
+                                    Learn to drive with confidence and skill. Our expert instructors make safety and
+                                    success a priority. Start your journey to freedom on the road today.
+                                </div>
+                                <div class="about-us-achievements">
+                                    <div class="about-award">
+                                        <h3>We are Certified</h3>
+                                        <p>
+                                            Learn to drive with confidence and skill. Our expert instructors make safety
+                                            and
+                                        </p>
+                                    </div>
+                                    <div class="about-us-win-award">
+                                        <h3>Award Win</h3>
+                                        <p>
+                                            Learn to drive with confidence and skill. Our expert instructors make safety
+                                            and
+                                        </p>
+
+                                    </div>
+                                </div>
+                                <span>
+                                    <a href="#" class="about-read-more-btn">
+                                        More Details
+                                    </a>
+                                </span>
+                            </div>
+                        </div>
+                        <!-- Slider Buttons Will be Here! -->
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- About Us Section End -->
+
         <!-- Our Team Section Start -->
 
         <section class="our-team-section">
@@ -541,7 +616,8 @@
         <!-- Our Training Video Section Starts -->
 
         <section class="training-video-section">
-            <div class="container">
+            <div class="train-vid-sec-bg"></div>
+            <div class="container train-vid-sec-main-content">
                 <div class="row training-video-title-row">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                         <h2 class="training-video-title">
